# wx-sober-operator

./: CMakeLists.txt  README.md  main.cpp
common/: ModifiedJonkerVolgenant.cpp  ModifiedJonkerVolgenant.h
common/assign/: ModifiedJonkerVolgenant.cpp  ModifiedJonkerVolgenant.h
common/assign/test/: test_modified_jonker_volgenant.cpp
